small frontend and multi user support

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,4 +4,10 @@ REDIRECT_URI="http://127.0.0.1:3000/callback"
 GENRES="indie,rock,pop,alternative,alternative rock,goblincore"
 PLAYLIST_NAME="Ultra Underground Mix"
 
+DATABASE_USER="username"
+DATABASE_PASSWORD="password"
+DATABASE_NAME="mydb"
+DATABASE_HOST="localhost"
+DATABASE_PORT=3306
+
 PORT = 3000
