--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/adapter-mariadb": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "axios": "^1.13.4",
+    "cors": "^2.8.6",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "node-cache": "^5.1.2"
+  },
+  "devDependencies": {
+    "prisma": "^7.3.0"
   }
 }
