--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,8 @@ Client_Secret=
 REDIRECT_URI="http://127.0.0.1:3000/callback"
 GENRES="indie,rock,pop,alternative,alternative rock,goblincore"
 PLAYLIST_NAME="Ultra Underground Mix"
+FRONTEND_URL="http://127.0.0.1:4000"
+JWT_SECRET="12345678"
 
 DATABASE_USER="username"
 DATABASE_PASSWORD="password"
