--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ GENRES="indie,rock,pop,alternative,alternative rock,goblincore"
 PLAYLIST_NAME="Ultra Underground Mix"
 FRONTEND_URL="http://127.0.0.1:4000"
 JWT_SECRET="12345678"
+NODE_ENV="development" #production | development
 
 DATABASE_USER="username"
 DATABASE_PASSWORD="password"
