new tracks only

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ Client_Secret=
 REDIRECT_URI="http://127.0.0.1:3000/callback"
 GENRES="indie,rock,pop,alternative,alternative rock,goblincore"
 PLAYLIST_NAME="Ultra Underground Mix"
+PLAYLIST_DESCRIPTION=""Made by your Atemzy""
 FRONTEND_URL="http://127.0.0.1:4000"
 JWT_SECRET="12345678"
 NODE_ENV="development" #production | development
